@@ -1,10 +1,7 @@
 package com.ryuqq.core.api.controller;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.BindException;
@@ -18,23 +15,17 @@ import com.ryuqq.core.api.exception.CoreException;
 import com.ryuqq.core.api.payload.ApiResponse;
 import com.ryuqq.core.api.payload.ErrorMessage;
 import com.ryuqq.core.enums.ErrorType;
-import com.ryuqq.core.utils.TraceIdHolder;
 
 @RestControllerAdvice
 @RestController
 public class GlobalExceptionController {
 
-	private static final Logger log = LoggerFactory.getLogger(GlobalExceptionController.class);
-
 	@ExceptionHandler(MethodArgumentNotValidException.class)
 	public ResponseEntity<ApiResponse<?>> handleValidationException(MethodArgumentNotValidException ex) {
-		String traceId = TraceIdHolder.getTraceId();
 
 		List<String> validationErrors = ex.getBindingResult().getFieldErrors().stream()
 			.map(error -> String.format("%s: %s", error.getField(), error.getDefaultMessage()))
-			.collect(Collectors.toList());
-
-		log.error("Validation error: TraceId={} Errors={}", traceId, validationErrors);
+			.toList();
 
 		ErrorMessage errorMessage = new ErrorMessage(ErrorType.BAD_REQUEST_ERROR, validationErrors.toString());
 		return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(ApiResponse.error(errorMessage));
@@ -42,13 +33,10 @@ public class GlobalExceptionController {
 
 	@ExceptionHandler(BindException.class)
 	public ResponseEntity<ApiResponse<?>> handleBindException(BindException ex) {
-		String traceId = TraceIdHolder.getTraceId();
 
 		List<String> errors = ex.getFieldErrors().stream()
 			.map(error -> String.format("%s: %s", error.getField(), error.getDefaultMessage()))
-			.collect(Collectors.toList());
-
-		log.error("Binding error: TraceId={} Errors={}", traceId, errors);
+			.toList();
 
 		ErrorMessage errorMessage = new ErrorMessage(ErrorType.BAD_REQUEST_ERROR, errors.toString());
 		return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(ApiResponse.error(errorMessage));
@@ -56,39 +44,18 @@ public class GlobalExceptionController {
 
 	@ExceptionHandler(Exception.class)
 	public ResponseEntity<ApiResponse<?>> handleUnexpectedException(Exception ex) {
-		String traceId = TraceIdHolder.getTraceId();
-
-		log.error("Unexpected error: TraceId={} Message={}", traceId, ex.getMessage(), ex);
-
 		ErrorMessage errorMessage = new ErrorMessage(ErrorType.UNEXPECTED_ERROR, "An unexpected error occurred.");
 		return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(ApiResponse.error(errorMessage));
 	}
 
 	@ExceptionHandler(CoreException.class)
-	public ResponseEntity<ApiResponse<?>> handleCoreException(CoreException ex) {
-		String traceId = TraceIdHolder.getTraceId();
-
-		log.error("CoreException: TraceId={} Message={}", traceId, ex.getMessage(), ex);
-
+	public ResponseEntity<ApiResponse<?>> handleApplicationException(CoreException ex) {
 		ErrorMessage errorMessage = new ErrorMessage(ex.getErrorType(), ex.getMessage());
-		return ResponseEntity.status(HttpStatus.valueOf(ex.getErrorType().getStatus())).body(ApiResponse.error(errorMessage));
-	}
-
-	@ExceptionHandler(RuntimeException.class)
-	public ResponseEntity<ApiResponse<?>> handleRuntimeException(RuntimeException ex) {
-		String traceId = TraceIdHolder.getTraceId();
-
-		log.error("RuntimeException: TraceId={} Message={}", traceId, ex.getMessage(), ex);
-
-		ErrorMessage errorMessage = new ErrorMessage(ErrorType.UNEXPECTED_ERROR, "An unexpected runtime error occurred.");
 		return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(ApiResponse.error(errorMessage));
 	}
 
 	@ExceptionHandler(NoHandlerFoundException.class)
 	public ResponseEntity<ApiResponse<?>> handleNoHandlerFoundException(NoHandlerFoundException ex) {
-		String traceId = TraceIdHolder.getTraceId();
-
-		log.warn("NoHandlerFoundException: TraceId={} HTTP Method={} URL={}", traceId, ex.getHttpMethod(), ex.getRequestURL());
 
 		ErrorMessage errorMessage = new ErrorMessage(
 			ErrorType.NOT_FOUND_ERROR,
